# glw_imgui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.sublime-project  imgui.sublime-workspace
.github/workflows/: main.yml
demo/: CMakeLists.txt  main.cpp  platform_sdl.cpp  platform_sdl.h  renderer_sdl.cpp  renderer_sdl.h
demo/assets/: default.theme
include/: imgui_io.h  imgui_platform.h  imgui_render_queue.h  imgui_rollout.h  imgui_toolbars.h  imgui_ui.h  io.h  irenderer.h  platform.h  render.h  render_queue.h  rollout.h  toolbars.h  ui.h
src/: imgui_io.cpp  imgui_render.cpp  imgui_render_queue.cpp  imgui_rollout.cpp  imgui_toolbars.cpp  imgui_ui.cpp  io.cpp  render.cpp  render_queue.cpp  rollout.cpp  toolbars.cpp  ui.cpp
tests/: CMakeLists.txt  imgui_io.cpp  imgui_main.cpp  imgui_platform.cpp  imgui_render_queue.cpp  imgui_toolbars.cpp  imgui_ui.cpp
tests/gtests/: CMakeLists.txt
