CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(demo)

SET( SDL2_PATH thirdparty/SDL2)
SET( GLEW_PATH thirdparty/glew)

SET(SDL_STATIC OFF)

ADD_SUBDIRECTORY(${SDL2_PATH})
ADD_SUBDIRECTORY(${GLEW_PATH}/build/cmake)

INCLUDE_DIRECTORIES(${SDL2_PATH}/include)
INCLUDE_DIRECTORIES(${GLEW_PATH}/include)

INCLUDE_DIRECTORIES(./../include)

IF(WIN32)
   	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ENDIF()

IF (APPLE)
	FIND_LIBRARY(OpenGL_LIBRARY OpenGL)
ELSE()
	SET(OpenGL_LIBRARY opengl32)
ENDIF()

ADD_EXECUTABLE (${PROJECT_NAME} main.cpp platform_sdl.cpp platform_sdl.h)
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} SDL2 SDL2main glew_s ${OpenGL_LIBRARY} imgui)

IF(WIN32)
    # copy SDL dll near demo.exe
	ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD       
		COMMAND ${CMAKE_COMMAND} -E copy_if_different  			
			"${CMAKE_CURRENT_BINARY_DIR}/thirdparty/SDL2/$<CONFIGURATION>/SDL2.dll"
			$<TARGET_FILE_DIR:${PROJECT_NAME}>)
ENDIF()
